--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Qian Liu's Personal Page"
 title_separator          : "-"
 name                     : &name "Qian Liu"
 description              : &description "Ph.D. Candidate in Beihang University"
-url                      : http://siviltaram.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://siviltaram.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
