--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 locale                   : "en-US"
 title                    : "Qian Liu's Personal Page"
-title_separator          : "-"
+title_separator          : " "
 name                     : &name "Qian Liu"
 description              : &description "Ph.D. Candidate in Beihang University"
 url                      : https://siviltaram.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
