--- a/_config.yml
+++ b/_config.yml
@@ -102,14 +102,14 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/siviltaram"
+  linkedin         : "siviltaram"
   orcid            :
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "https://twitter.com/sivil_taram"
+  twitter          : "sivil_taram"
   vine             :
   weibo            :
   xing             :
