udpate image and tapex info

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Home Page | Qian Liu"
+title                    : "Home Page - Qian Liu"
 title_separator          : " "
 name                     : &name "Qian Liu"
 description              : &description "Ph.D. Candidate in Beihang University"
