--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,9 +2,9 @@
 main:
   - title: "Publications"
     url: /publications/
-            
-  - title: "Blog"
-    url: https://www.cnblogs.com/SivilTaram
-    
+
+  # - title: "Blog"
+  #   url: https://www.cnblogs.com/SivilTaram
+
   - title: "CV"
     url: /cv/
