--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 author:
   name: "Yuhan Li"
   avatar: "yhli.jpg"
-  bio: "Master candidate in Nankai University"
+  bio: "M.S. candidate in Nankai University"
   location: "Beijing, China"
   employer:
   pubmed:
